--- a/src/Faithlife.Utility/Faithlife.Utility.csproj
+++ b/src/Faithlife.Utility/Faithlife.Utility.csproj
@@ -8,14 +8,14 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
     <DebugType>portable</DebugType>
     <DebugSymbols>True</DebugSymbols>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/Faithlife/RepoName/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Faithlife/RepoName</PackageProjectUrl>
-    <PackageReleaseNotes>https://github.com/Faithlife/RepoName/VersionHistory.md</PackageReleaseNotes>
-    <RepositoryUrl>https://github.com/Faithlife/RepoName.git</RepositoryUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Faithlife/FaithlifeUtility/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Faithlife/FaithlifeUtility</PackageProjectUrl>
+    <PackageReleaseNotes>https://github.com/Faithlife/FaithlifeUtility/VersionHistory.md</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/Faithlife/FaithlifeUtility.git</RepositoryUrl>
     <Authors>Faithlife Corporation</Authors>
     <Copyright>Copyright 2017 Faithlife Corporation</Copyright>
-    <SourceLinkUrl>https://raw.githubusercontent.com/Faithlife/RepoName/{commit}/*</SourceLinkUrl>
-    <SourceLinkOriginUrl>https://github.com/Faithlife/RepoName.git</SourceLinkOriginUrl>
+    <SourceLinkUrl>https://raw.githubusercontent.com/Faithlife/FaithlifeUtility/{commit}/*</SourceLinkUrl>
+    <SourceLinkOriginUrl>https://github.com/Faithlife/FaithlifeUtility.git</SourceLinkOriginUrl>
   </PropertyGroup>
 
   <ItemGroup>
