--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ sudo: required
 dist: trusty
 
 before_install:
-- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
-- sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
-- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
 - sudo apt-get update
-- sudo apt-get install dotnet-sdk-2.0.0
+- sudo apt-get install dotnet-sdk-2.0.0 dotnet-sharedframework-microsoft.netcore.app-1.0.5
 
 script:
 - ./build.sh --target=NuGetPackage
