--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: csharp
-sudo: required
+mono: latest
+dotnet: 2.0.0
 dist: trusty
 
-before_install:
-- sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-- sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
-- sudo apt-get update
-- sudo apt-get install dotnet-sdk-2.0.0 dotnet-sharedframework-microsoft.netcore.app-1.0.5
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
+      key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    packages:
+    - dotnet-hostfxr-1.0.1
+    - dotnet-sharedframework-microsoft.netcore.app-1.0.5
 
 script:
 - ./build.sh --target=NuGetPackage
