Add test to confirm DictionaryUtility.GetValueOrDefault() referenced from a .NET Standard library works correctly in .NET Core 2.0.

--- a/tests/Faithlife.Utility.Tests/Faithlife.Utility.Tests.csproj
+++ b/tests/Faithlife.Utility.Tests/Faithlife.Utility.Tests.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Faithlife.Utility\Faithlife.Utility.csproj" />
+    <ProjectReference Include="..\MyLib\MyLib.csproj" />
   </ItemGroup>
 
 </Project>
