--- a/src/Faithlife.Utility/Faithlife.Utility.csproj
+++ b/src/Faithlife.Utility/Faithlife.Utility.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>0.6.0</VersionPrefix>
-    <TargetFrameworks>netstandard1.4;netstandard2.0;net461</TargetFrameworks>
+    <VersionPrefix>0.7.0</VersionPrefix>
+    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <Description>Common .NET utility code in use at Faithlife</Description>
     <Description></Description>
