--- a/tests/Faithlife.Utility.Tests/Faithlife.Utility.Tests.csproj
+++ b/tests/Faithlife.Utility.Tests/Faithlife.Utility.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net5.0;netcoreapp2.1;net472</TargetFrameworks>
     <EnableNETAnalyzers>false</EnableNETAnalyzers>
   </PropertyGroup>
 
