--- a/src/Faithlife.Utility/Faithlife.Utility.csproj
+++ b/src/Faithlife.Utility/Faithlife.Utility.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <Description>Common .NET utility code in use at Faithlife</Description>
     <PackageTags></PackageTags>
     <IsPackable>true</IsPackable>
